--- a/package.xml
+++ b/package.xml
@@ -18,12 +18,14 @@
   <build_depend>extrinsics_array</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>paraset</build_depend>
 
   <run_depend>argus_utils</run_depend>
   <run_depend>extrinsics_array</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>nav_msgs</run_depend>
   <run_depend>paraset</run_depend>
   
 </package>
